Added /list-games endpoint
