# matchmaker/src/main/java/dev/totallyspies/spydle/matchmaker/redis/GameServerRepository.java
@@ -6,6 +6,10 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Repository;
 
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Set;
+
 @Repository
 public class GameServerRepository {
 
@@ -20,6 +24,14 @@ public class GameServerRepository {
 
     public boolean gameServerExists(String roomCode) {
         return Boolean.TRUE.equals(redisTemplate.hasKey(PREFIX + roomCode));
+    }
+
+    public List<GameServer> getGameServers() {
+        Set<String> keys = redisTemplate.keys(PREFIX + "*");
+        if (keys == null) {
+            return new LinkedList<>();
+        }
+        return keys.stream().map(key -> (GameServer) redisTemplate.opsForValue().get(key)).toList();
     }
 
 }
